--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
+		<meta name='viewport' content='shirnk-to-fit="no", initial-scale=1.0 width=device-width user-scaleable=no'>
+		<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
 		</script>
 		<script type="text/javascript" src="/pixalbuddy/partials/js/index.js">
 		</script>
 	</head>
-	<body>
-	</body>
 </html>
